# fullstack-fastapi-react

./: .env  .env.local  .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml
.github/codeql/: codeql-config.yml
.github/workflows/: backend.yml  deploy.yml  frontend.yml  security.yml
backend/: .dockerignore  Dockerfile  alembic.ini  coverage.xml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 09fac9965b5b_init_tables.py  a1b2c3d4e5f6_add_permissions_tables.py
backend/app/: backend_pre_start.py  main.py
backend/app/api/: deps.py  routers.py
backend/app/api/endpoints/: auth.py  permissions.py  roles.py  users.py
backend/app/core/: app.py  db.py  events.py  limiter.py  middleware.py  profiler.py  rabbit_mq.py  redis.py
backend/app/core/config/: __init__.py  base.py  components.py  local.py  production.py
backend/app/core/exceptions/: __init__.py
backend/app/core/exceptions/handlers/: __init__.py  auth.py  database.py  http.py  other.py  utils.py
backend/app/core/exceptions/types/: __init__.py  base.py  config.py  database.py  token.py  user.py  validation.py
backend/app/models/domain/: permission.py  role.py  session.py  user.py
backend/app/models/schemas/: email.py  pagination.py  password.py  response.py  role.py  session.py  token.py  user.py
backend/app/repositories/: base.py  permission.py  role.py  session.py  unit_of_work.py  user.py
backend/app/services/: auth_service.py  user_service.py
backend/app/utils/: auth.py  cache.py  notification.py  password.py  response.py
backend/app/validators/: user.py
backend/monitoring/benchmark/: RESULT_benchmark_20250713_002106.md
backend/monitoring/load/: RESULT_load_20250713_002724.md
backend/monitoring/memory/: RESULT_memory_20250713_002135.md
backend/scripts/: analyze_queries.py  optimize_db.py  pg_stat_query.py  prestart.sh
backend/tests/: README.md  conftest.py  parametrized_test_data.py  utils.py
backend/tests/performance/: analyze_performance.py
backend/tests/performance/benchmark/: test_api_performance.py  test_database_performance.py
backend/tests/performance/load/: locustfile.py  run_apache_benchmark.py  run_load_tests.py
backend/tests/performance/memory/: test_memory_usage.py
backend/tests/unit/api/: test_auth.py  test_deps.py  test_users.py
backend/tests/unit/core/: test_app_init.py  test_limiter.py  test_middleware.py  test_rabbit_mq.py  test_redis.py
backend/tests/unit/repositories/: test_base_repository.py  test_role_repository.py  test_session_repository.py  test_user_repository.py
backend/tests/unit/services/: test_auth_service.py  test_user_service.py
backend/tests/unit/utils/: test_auth_tokens.py  test_notification.py  test_password.py  test_response.py
backend/tests/unit/validators/: test_user.py
frontend/: .dockerignore  .env  .env.local  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppInitializer.tsx  AuthDialog.tsx  AuthForm.tsx  CategorySection.tsx  EndpointBody.tsx  EndpointCategory.tsx  EndpointExplorer.tsx  EndpointHeader.tsx  EndpointItem.tsx  EndpointList.tsx  Header.tsx  LoadingOverlay.tsx  NewPassword.tsx  PageNotFound404.tsx  RequestBodySection.tsx  ResetPassword.tsx  ResponseTabs.tsx  RoleDetail.tsx  RoleList.tsx  RoleManagement.tsx  UrlParametersForm.tsx  UserInfo.tsx  VerifyCode.tsx
frontend/src/config/: endpointConfig.ts  env.ts
frontend/src/constants/: endpointConstants.ts
frontend/src/hooks/: index.ts  useEndpointActions.ts  useEndpointConfig.ts  useEndpointData.ts  useEndpointInteraction.ts  useEndpointManager.ts  useEndpointUI.ts  useRequestBodies.ts  useRequestHandler.ts  useUrlParams.ts  useUrlParamsContext.ts
frontend/src/layouts/: MainLayout.tsx
monitoring/grafana/: grafana.ini
monitoring/loki/: loki-config.yaml
monitoring/profiling/: profile_20250725.html  profile_20250727.html  profile_20250729.html
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yaml
rabbitmq/rabbitmq.conf/: rabbitmq.conf
scripts/: security-check.sh
(+42 files in other folders)
